Fix of Overflow

--- a/src/js/src/scss/components/_aaaOutagesPage.scss
+++ b/src/js/src/scss/components/_aaaOutagesPage.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  overflow: auto;
 
   .aaa__header {
     width: 100%;
